--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -35,3 +35,10 @@ jobs:
           source env/bin/activate
           pip install -r requirements.txt
           pytest
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN}}
+          aws-region: us-east-1
