--- a/requirements.txt
+++ b/requirements.txt
@@ -5,18 +5,24 @@ bs4==0.0.1
 certifi==2022.12.7
 charset-normalizer==3.1.0
 DateTime==5.1
+decorator==5.1.1
 exceptiongroup==1.1.1
 flake8==6.0.0
+httptools==0.5.0
 idna==3.4
 iniconfig==2.0.0
 jmespath==1.0.1
 mccabe==0.7.0
+mocker==1.1.1
+mocket==3.11.0
 packaging==23.1
 pluggy==1.0.0
 pycodestyle==2.10.0
 pyflakes==3.0.1
 pytest==7.3.1
+pytest-mock==3.10.0
 python-dateutil==2.8.2
+python-magic==0.4.27
 pytz==2023.3
 requests==2.28.2
 s3transfer==0.6.0
